<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="opc_Fichero"
        android:title="@string/title_Ajustes">

        <EditTextPreference
            android:key="@string/key_NombreFichero"
            android:title="@string/title_NombreFichero"
            android:defaultValue="@string/default_NombreFichero"
            android:singleLine="true"
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreference
            android:key="@string/key_TarjetaSD"
            android:title="@string/txtPrefTarjetaSD"
            android:defaultValue="@bool/default_prefTarjetaSD"
            android:summary="@string/txtPrefTarjetaSDExplicación" />

    </PreferenceCategory>

</PreferenceScreen>